// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchBox /> renders correctly 1`] = `
<JssProvider
  generateClassName={[Function]}
>
  <HvProvider
    changeTheme={[Function]}
    router={null}
    theme={null}
    uiKitTheme="dawn"
  >
    <WithStyles(HvSearchBox)
      onChange={[MockFunction]}
    />
  </HvProvider>
</JssProvider>
`;

exports[`<SearchBox /> renders disabled correctly 1`] = `
<JssProvider
  generateClassName={[Function]}
>
  <HvProvider
    changeTheme={[Function]}
    router={null}
    theme={null}
    uiKitTheme="dawn"
  >
    <WithStyles(HvSearchBox)
      disabled={true}
      onChange={[MockFunction]}
    />
  </HvProvider>
</JssProvider>
`;
